--- a/cv.tex
+++ b/cv.tex
@@ -163,28 +163,13 @@
         \itemlist {%
                 \textsc{\small Languages} %
                 & \textbf{JavaScript} (Expert), \textbf{Java} (Proficient), \textbf{Python} (Proficient),
-                  \textbf{C/C++} (Functional)\\
+                  \textbf{C++} (Functional)\\
                 \textsc{\small Web Dev} %
                 & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{React}, \textbf{Nodejs}\\
                 \textsc{\small Tools} %
                 & \textbf{Git} (Expert), \textbf{Shell} (Proficient), \textbf{Vim} (Expert)\\
             }
     }
-
-%----------------------------------------------------------------------------------------
-%   RELEVANT COURSES
-%----------------------------------------------------------------------------------------
-% \highlight
-%     {Courses}
-%     {\small
-%         \begin{tabular}{p{16.5cm}}
-%                 Operating Systems, Computer and Internet Security, Networks,
-%                 Compilers, Principles of Programming Languages, Computer Organization,
-%                 Computing Lab I \& II, Algorithms I \& II\\
-%
-%         \end{tabular}
-%     }
-%
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
@@ -467,9 +452,9 @@
 \section{Awards and Achievements}
 
 \itemlist {%
-    \textsc{\small May 2015}    & Achieved a rank of \textbf{53} in
-                                  \href{https://www.kaggle.com/c/bike-sharing-demand/leaderboard}
-                                  {Kaggle's Bike Sharing Demand} Machine Learning Competition. \\
+    % \textsc{\small May 2015}    & Achieved a rank of \textbf{53} in
+    %                               \href{https://www.kaggle.com/c/bike-sharing-demand/leaderboard}
+    %                               {Kaggle's Bike Sharing Demand} Machine Learning Competition. \\
     \textsc{\small 2011-2015}   & Students' \textbf{Gymkhana Leadership Award}, IIT Kanpur. \\
     \textsc{\small 2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
                                     \textbf{Systems and Network Security};
@@ -479,10 +464,10 @@
                                     \textbf{Fundamentals of Computing};
                                     \textbf{Introduction to Philosophy} \\
     \textsc{\small 2011-2015}   & Recipient of \textbf{Academic Excellence Award}, IIT Kanpur, thrice. \\
-    \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
+    % \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
     \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (\textbf{KVPY}) Fellowship \\
-    \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at
-                                  Advanced Materials Research Institute, Bhopal\\
+    % \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at
+    %                               Advanced Materials Research Institute, Bhopal\\
 
     % \textsc{\small 2014-2015}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     % \textsc{\small 2014-2015}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
@@ -529,9 +514,9 @@
     {2013 -- 2014}
     {Editor-in-chief, Vox Populi, the campus newsletter.}
 
-\skill
-    {2012 -- 2013}
-    {Senator, Students' Senate, IITK Y11 batch.}
+% \skill
+%     {2012 -- 2013}
+%     {Senator, Students' Senate, IITK Y11 batch.}
 
 % \gitproject
 %     {2014 - 2015}
@@ -567,30 +552,39 @@
 
 \section{Volunteer Work}
 
-\gitproject
+\skill
     {2014 -- 2015}
     {Member, Institute Anti Ragging Committee}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Appointed as a member of the Institute Anti Ragging Committee, \textbf{a 10 member committee} responsible
-                for welfare of the newly admitted freshmen.
-            \item Worked in tandem with the office of the Dean of Student Affairs, to organize sessions
-                on \textbf{easing the transition of freshmen}.  Ensured institute norms regarding humane treatment
-                of freshmen are properly conveyed to all senior batches and worked towards the enforcement of those norms.
-        \end{itemize}
-    }
 
-\cproject
+% \gitproject
+%     {2014 -- 2015}
+%     {Member, Institute Anti Ragging Committee}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Appointed as a member of the Institute Anti Ragging Committee, \textbf{a 10 member committee} responsible
+%                 for welfare of the newly admitted freshmen.
+%             \item Worked in tandem with the office of the Dean of Student Affairs, to organize sessions
+%                 on \textbf{easing the transition of freshmen}.  Ensured institute norms regarding humane treatment
+%                 of freshmen are properly conveyed to all senior batches and worked towards the enforcement of those norms.
+%         \end{itemize}
+%     }
+%
+
+\skill
     {2013 -- 2014}
-    {Tutor, English Proficiency Programme}
-    {Professor Bhaskar Das Gupta}
-    {}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Worked as a \textbf{English tutor} in the pilot English Proficiency Programme to help
-                \textbf{under-privileged students} obtain a functional knowlege of English.
-        \end{itemize}
-    }
+    {Tutor, English Proficiency Programme, Professor Bhaskar Das Gupta}
+
+% \cproject
+%     {2013 -- 2014}
+%     {Tutor, English Proficiency Programme}
+%     {Professor Bhaskar Das Gupta}
+%     {}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Worked as a \textbf{English tutor} in the pilot English Proficiency Programme to help
+%                 \textbf{under-privileged students} obtain a functional knowlege of English.
+%         \end{itemize}
+%     }
 
 \skill
     {2012 -- 2013}
