--- a/cv.tex
+++ b/cv.tex
@@ -331,7 +331,7 @@
 %----------------------------------------------------------------------------------------
 %  PROJECTS
 %----------------------------------------------------------------------------------------
-\vspace{-0.65cm}
+\vspace{-0.35cm}
 % \let\thefootnote\relax\footnote{Monsoon semester: July to November}
 % \let\thefootnote\relax\footnote{Winter Semester: January to April}
 \section{Projects}
@@ -373,78 +373,36 @@
         \end{itemize}
     }
 
-% \cproject
-%     {Winter 2013-2014}
-%     {JavaScript to MIPS Compiler}
-%     {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
-%     {\href{https://github.com/srijanshetty/javascript-compiler} {[GitHub]}}
-%     {%
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%             \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
-%                 functions, anonymous functions, static types, type annotations, recursion and nested functions.
-%         \end{itemize}
-%     }
-
-% \cproject
-%     {Monsoon 2013-2014}
-%     {NachOS}
-%     {\textsc{Operating Systems}, Professor Mainak Chaudhari}
-%     {\href{https://github.com/srijanshetty/nachos} {[GitHub]}}
-%     {%
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%             \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
-%                 Join, Yield, Sleep and Exit.
-%             \item Implemented process scheduling algorithms: UNIX Scheduling, First in First Out,
-%                 Round Robin, Shortest Job First and Non-pre-emptive job scheduling to assess their relative performances.
-%             \item Programmed page replacement algorithms: Random Page Allocation, First in First Out,
-%                 Least Recently Used(LRU) and LRU Clock to evaluate relative performances under difference scenarios.
-%         \end{itemize}
-%     }
-
-% \cproject
-%     {Winter 2012-2013}
-%     {8-bit General Purpose Computer on a FPGA}
-%     {\textsc{Computer Organization}, Professor Subhajit Roy}
-%     {\href{https://github.com/srijanshetty/220\_y11} {[GitHub]}}
-%     {%
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%             \item Designed and programmed a simple \textbf{Instruction set Architecture (ISA)} for a 8-bit General
-%                 Purpose Computer with a \textbf{load-store}
-%                 architecture on \textbf{Xilinx Spartan 3 FPGA} using System Verilog.  Demonstrated recursion, looping
-%                 and conditionals on the Computer by using a simple assembly language.
-%         \end{itemize}
-%     }
-
 %----------------------------------------------------------------------------------------
 %  INDEPENDENT PROJECTS
 %----------------------------------------------------------------------------------------
-% \section{Independent Projects}
+\section{Independent Projects}
 
-% \cproject
-%     {Winter 2014-2015}
-%     {VS-3, Electronic Voting}
-%     {Election Council, IIT Kanpur}
-%     {\href{https://github.com/srijanshetty/elections} {\small{[GitHub]}}}
-%     {%
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%             \item Designed and created a new electronic voting system in consultation with the \textbf{Students' Senate}
-%                 to facilitate smooth electonic voting in the campus.
-%             \item The voting system was subsequently used in Students'
-%                 Gymkhana General Elections, Hall 8 HEC Elections, Hall 2 HEC Elections and Hall 4 HEC Elections.
-%         \end{itemize}
-%     }
+\cproject
+    {Winter 2014-2015}
+    {VS-3, Electronic Voting}
+    {Election Council, IIT Kanpur}
+    {\href{https://github.com/srijanshetty/elections} {\small{[GitHub]}}}
+    {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Designed and created a new electronic voting system in consultation with the \textbf{Students' Senate}
+                to facilitate smooth electonic voting in the campus.
+            \item The voting system was subsequently used in Students'
+                Gymkhana General Elections, Hall 8 HEC Elections, Hall 2 HEC Elections and Hall 4 HEC Elections.
+        \end{itemize}
+    }
 
-% \cproject
-%     {Summer 2012-2013}
-%     {VANI - Voicing Archiving and Networking Information}
-%     {Professor Manidra Agarwal, Professor T. V. Prabhakar}
-%     {}
-%     {%
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%             \item Initiated the creation of VANI - an extensible community platform with applications
-%                 for forums, wikis, search, lost and found and calendars.
-%         \end{itemize}
-%     }
+\cproject
+    {Summer 2012-2013}
+    {VANI - Voicing Archiving and Networking Information}
+    {Professor Manidra Agarwal, Professor T. V. Prabhakar}
+    {}
+    {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Initiated the creation of VANI - an extensible community platform with applications
+                for forums, wikis, search, lost and found and calendars.
+        \end{itemize}
+    }
 
 %----------------------------------------------------------------------------------------
 %   Awards and Achievements
@@ -452,27 +410,18 @@
 \section{Awards and Achievements}
 
 \itemlist {%
-    % \textsc{\small May 2015}    & Achieved a rank of \textbf{53} in
-    %                               \href{https://www.kaggle.com/c/bike-sharing-demand/leaderboard}
-    %                               {Kaggle's Bike Sharing Demand} Machine Learning Competition. \\
+    \textsc{\small May 2015}    & Achieved a rank of \textbf{53} in
+                                  \href{https://www.kaggle.com/c/bike-sharing-demand/leaderboard}
+                                  {Kaggle's Bike Sharing Demand} Machine Learning Competition. \\
     \textsc{\small 2011-2015}   & Students' \textbf{Gymkhana Leadership Award}, IIT Kanpur. \\
-    \textsc{\small 2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
-                                    \textbf{Systems and Network Security};
-                                    \textbf{Computer Networks};
-                                    \textbf{Computer Organization};
-                                    \textbf{Logic for Computer Science};
-                                    \textbf{Fundamentals of Computing};
-                                    \textbf{Introduction to Philosophy} \\
-    \textsc{\small 2011-2015}   & Recipient of \textbf{Academic Excellence Award}, IIT Kanpur, thrice. \\
-    % \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
     \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (\textbf{KVPY}) Fellowship \\
-    % \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at
-    %                               Advanced Materials Research Institute, Bhopal\\
+    \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at
+                                  Advanced Materials Research Institute, Bhopal\\
 
-    % \textsc{\small 2014-2015}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    % \textsc{\small 2014-2015}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    % \textsc{\small 2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    % \textsc{\small 2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small 2014-2015}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small 2014-2015}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small 2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small 2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     % \textsc{\small Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
 }
 
