--- a/cv.tex
+++ b/cv.tex
@@ -410,9 +410,9 @@
 \section{Awards and Achievements}
 
 \itemlist {%
-    \textsc{\small May 2015}    & Achieved a rank of \textbf{53} in
-                                  \href{https://www.kaggle.com/c/bike-sharing-demand/leaderboard}
-                                  {Kaggle's Bike Sharing Demand} Machine Learning Competition. \\
+    % \textsc{\small May 2015}    & Achieved a rank of \textbf{53} in
+    %                               \href{https://www.kaggle.com/c/bike-sharing-demand/leaderboard}
+    %                               {Kaggle's Bike Sharing Demand} Machine Learning Competition. \\
     \textsc{\small 2011-2015}   & Students' \textbf{Gymkhana Leadership Award}, IIT Kanpur. \\
     \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (\textbf{KVPY}) Fellowship \\
     \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at
@@ -434,6 +434,17 @@
 \skill
     {2014 - 2015}
     {Chief Election Officer, Election Council, IIT Kanpur}
+
+% \gitproject
+%     {2014 - 2015}
+%     {Chief Election Officer, Election Council, IIT Kanpur}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Conducted General Elections, Student's Gymkhana 2014 and
+%                 Girls Representative Elections, Students' Gymkhana 2014.
+%             \item Developed a new voting software from ground up to cater to the needs of IIT Kanpur.
+%         \end{itemize}
+%     }
 
 \skill
     {2014 - 2015}
@@ -466,17 +477,6 @@
 % \skill
 %     {2012 -- 2013}
 %     {Senator, Students' Senate, IITK Y11 batch.}
-
-% \gitproject
-%     {2014 - 2015}
-%     {Chief Election Officer, Election Council, IIT Kanpur}
-%     {%
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%             \item Conducted General Elections, Student's Gymkhana 2014 and
-%                 Girls Representative Elections, Students' Gymkhana 2014.
-%             \item Developed a new voting software from ground up to cater to the needs of IIT Kanpur.
-%         \end{itemize}
-%     }
 
 % \gitproject
 %     {2013 -- 2014}
@@ -517,7 +517,7 @@
 %                 of freshmen are properly conveyed to all senior batches and worked towards the enforcement of those norms.
 %         \end{itemize}
 %     }
-%
+
 
 \skill
     {2013 -- 2014}
