--- a/cv.tex
+++ b/cv.tex
@@ -214,8 +214,6 @@
       {%
         \begin{itemize}[leftmargin=\bulletspace{}]
           \item Worked on Principal Liquidity Provision and systematic internalizer (SI) for the MiFiD II regime.
-          % \item Worked on the infrastructure to build out Systematic Internalizer and Public Quotes
-                % to scale at the level of Goldman.
           \item Scaled the web infrastructure (based on Vertx \& Angular) as a full stack developer, to visualize
                 and monitor realtime data streams over web sockets.
           \item Optimized PnL computations in python and worked on chunked messaging over ZeroMQ for performant
@@ -336,19 +334,19 @@
 % \let\thefootnote\relax\footnote{Winter Semester: January to April}
 \section{Projects}
 
-\cproject
-    {Winter 2014-2015}
-    {Data Sensitive Hashing}
-    {\textsc{\raggedright Indexing and Searching in Databases}, Professor Arnab Bhattacharya}
-    {\href{https://github.com/srijanshetty/data-sensitive-hashing} {[GitHub]}}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Extended data sensitive hashing using standard Locality Sensitive Hashing extensions
-             to compare effectiveness.
-            % \item Implemented entropy based dsh, and multiprobe dsh and analysed relative performance with
-            %  respect to dsh.
-        \end{itemize}
-    }
+% \cproject
+%     {Winter 2014-2015}
+%     {Data Sensitive Hashing}
+%     {\textsc{\raggedright Indexing and Searching in Databases}, Professor Arnab Bhattacharya}
+%     {\href{https://github.com/srijanshetty/data-sensitive-hashing} {[GitHub]}}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Extended data sensitive hashing using standard Locality Sensitive Hashing extensions
+%              to compare effectiveness.
+%             \item Implemented entropy based dsh, and multiprobe dsh and analysed relative performance with
+%              respect to dsh.
+%         \end{itemize}
+%     }
 
 \cproject
     {Winter 2013-2014}
