--- a/cv.tex
+++ b/cv.tex
@@ -207,7 +207,7 @@
 \section{Work Experience}
 
 \cproject
-      {Dec 2017 - Present}
+      {Jan 2018 - Present}
       {Analyst, Systematic Market Making}
       {\textsc{Goldman Sachs}, Bangalore}
       {}
@@ -218,9 +218,16 @@
                 and monitor realtime data streams over web sockets.
           \item Optimized PnL computations in python and worked on chunked messaging over ZeroMQ for performant
                 message delivery.
-          \item Maintained the entire Java footprint of the team.
+          \item Develop the SRE and monitoring infrastructure of the team using a variant of the TICKstack (Telegram, Influx, Grafana, Kapacitor)
         \end{itemize}
       }
+
+\cproject
+      {Dec 2017 - Dec 2018}
+      {Analyst, Systematic Market Making}
+      {\textsc{Goldman Sachs}, Bangalore}
+      {}
+      {}
 
 \cproject
       {June 2015 - Nov 2017}
