--- a/resume.tex
+++ b/resume.tex
@@ -178,22 +178,27 @@
 \section{Work Experience}
 
 \cproject
-      {Dec 2017 - Present}
-      {Analyst, Systematic Market Making}
+      {Jan 2018 - Present}
+      {Associate, Systematic Market Making}
       {\textsc{Goldman Sachs}, Bangalore}
       {}
       {%
         \begin{itemize}[leftmargin=\bulletspace{}]
           \item Worked on Principal Liquidity Provision and systematic internalizer (SI) for the MiFiD II regime.
-          % \item Worked on the infrastructure to build out Systematic Internalizer and Public Quotes
-                % to scale at the level of Goldman.
           \item Scaled the web infrastructure (Vertx, Angular, React) as a full stack developer, to visualize
                 and monitor realtime data streams over web sockets.
           \item Optimized million rowed data streams by sending deltas and chunking of messages over ZeroMQ for performant
                 message delivery.
-          \item Maintainer of the Java footprint of the team.
+          \item Develop the SRE and monitoring infrastructure of the team using a variant of the TICKstack (Telegram, Influx, Grafana, Kapacitor)
         \end{itemize}
       }
+
+\cproject
+      {Dec 2017 - Dec 2018}
+      {Analyst, Systematic Market Making}
+      {\textsc{Goldman Sachs}, Bangalore}
+      {}
+      {}
 
 \cproject
       {June 2015 - Nov 2017}
@@ -202,13 +207,13 @@
       {}
       {%
         \begin{itemize}[leftmargin=\bulletspace{}]
-          % \item Analyzed various unwind and RENTD strategies for pro-active risk management, according
+          % \item Analyzed various unwind and rentd strategies for pro-active risk management, according
           %       to the alpha profile of flow.
-          % \item Developed the end-to-end full-stack infrastructure for centralizing FX \& Delta risk of
+          % \item Developed the end-to-end full-stack infrastructure for centralizing fx \& delta risk of
           %       internal desks, with a dynamic team working on a tech stack of Vertx, Java, React, Redux
           %       and proprietary systems.
-          % \item Designed a low latency block pricing REST service in Java and Vertx; dynamically adjusting
-          %       quotes for volatility and volument in market.
+          \item Designed a low latency block pricing REST service in Java and Vertx; dynamically adjusting
+                quotes for volatility and volument in market.
           \item Generated a data certification and analytics framework which served as the gold standard for
                 data driven policy decisions.
           \item Created a framework for realtime functional monitoring of processes using web based
