Update section on Associate

--- a/cv.tex
+++ b/cv.tex
@@ -208,6 +208,19 @@
 
 \cproject
       {Jan 2018 - Present}
+      {Associate, Systematic Market Making}
+      {\textsc{Goldman Sachs}, Bangalore}
+      {}
+      {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+          \item Worked on Principal Liquidity Provision and systematic internalizer (SI) for the MiFiD II regime.
+          \item Develop the SRE and monitoring infrastructure of the team using a variant of the TICKstack (Telegram, Influx, Grafana, Kapacitor)
+          \item Analyse and improve performance concurrent Java based infrastructure.
+        \end{itemize}
+      }
+
+\cproject
+      {Dec 2017 - Dec 2018}
       {Analyst, Systematic Market Making}
       {\textsc{Goldman Sachs}, Bangalore}
       {}
@@ -218,16 +231,8 @@
                 and monitor realtime data streams over web sockets.
           \item Optimized PnL computations in python and worked on chunked messaging over ZeroMQ for performant
                 message delivery.
-          \item Develop the SRE and monitoring infrastructure of the team using a variant of the TICKstack (Telegram, Influx, Grafana, Kapacitor)
         \end{itemize}
       }
-
-\cproject
-      {Dec 2017 - Dec 2018}
-      {Analyst, Systematic Market Making}
-      {\textsc{Goldman Sachs}, Bangalore}
-      {}
-      {}
 
 \cproject
       {June 2015 - Nov 2017}
