--- a/cv.tex
+++ b/cv.tex
@@ -207,7 +207,19 @@
 \section{Work Experience}
 
 \cproject
-      {Jan 2018 - Present}
+      {Jan 2019 - Feb 2019}
+      {Policy in Action Fellow (Bangalore 2019)}
+      {\textsc{Young Leaders for Active Citizenship}, YLAC}
+      {}
+      {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Prepared a policy brief for an MP by having conversations with stakeholders and analyzing publicly available data on the topic.
+            \item Understand the public policy landscape in Indian and learn about effective advocacy and sound policy making.
+        \end{itemize}
+      }
+
+\cproject
+      {Jan 2019 - Present}
       {Associate, Systematic Market Making}
       {\textsc{Goldman Sachs}, Bangalore}
       {}
