--- a/resume.tex
+++ b/resume.tex
@@ -178,7 +178,19 @@
 \section{Work Experience}
 
 \cproject
-      {Jan 2018 - Present}
+      {Jan 2019 - Feb 2019}
+      {Policy in Action Fellow (Bangalore 2019)}
+      {\textsc{Young Leaders for Active Citizenship}, YLAC}
+      {}
+      {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Prepared a policy brief for an MP by having conversations with stakeholders and analyzing publicly available data on the topic.
+            \item Understand the public policy landscape in Indian and learn about effective advocacy and sound policy making.
+        \end{itemize}
+      }
+
+\cproject
+      {Jan 2019 - Present}
       {Associate, Systematic Market Making}
       {\textsc{Goldman Sachs}, Bangalore}
       {}
@@ -306,7 +318,7 @@
     \textsc{\small 2014-2015}   & Head, Major Events and Competitions, Antaragni '14. \\
     \textsc{\small 2013-2014}   & Editor-in-chief, Vox Populi. \\
     \textsc{\small 2011-2015}   & Students' \textbf{Gymkhana Leadership Award}, IIT Kanpur. \\
-    % \textsc{\small 2011-2015}   & Recipient of \textbf{Academic Excellence Award}, IIT Kanpur, thrice. \\
+    \textsc{\small 2011-2015}   & Recipient of \textbf{Academic Excellence Award}, IIT Kanpur, thrice. \\
     \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (\textbf{KVPY}) Fellowship \\
 }
 
