--- a/cv.tex
+++ b/cv.tex
@@ -227,13 +227,15 @@
         \begin{itemize}[leftmargin=\bulletspace{}]
           \item Worked on Principal Liquidity Provision and systematic internalizer (SI) for the MiFiD II regime.
           \item Develop the monitoring infrastructure of the team using a variant of the TICKstack
-              (Telegram, Influx, Grafana, Kapacitor) to have visibility over a cluster of hundreds of
-              processes on tens of deployments.
-          \item Scaled Java backend on vertx3 to live stream millions of positions
+              (Telegram, Influx, Grafana, Kapacitor) to have visibility over a cluster of over hundred
+              processes co-located with exchanges across the globe.
+          \item Scaled Java backend on vertx3 to live stream upwards of 5 million positions
               and trades to a React frontend by snapshotting data.
           \item Analysed and improved performance regressions of multiple applications,
-              5x decrease on network congestion by coalescing packets on ZMQ.
-          \item Optimized PnL computations in python to handle millions of changes in positions.
+              5x decrease on network congestion by coalescing packets on ZMQ running our Event Sourcing
+              infrastructure.
+          \item Optimized PnL computations in python to over 3 million postion changes by efficient
+              use of concurrency in python.
         \end{itemize}
       }
 
