--- a/resume.tex
+++ b/resume.tex
@@ -177,6 +177,22 @@
 \section{Work Experience}
 
 \cproject
+      {Jan 2020 - Present}
+      {Co-founder \& CTO}
+      {\textsc{allround.club}, Bangalore}
+      {}
+      {%
+      }
+
+\cproject
+      {Aug 2019 - Dec 2019}
+      {Freelance Software Developer}
+      {Bangalore}
+      {}
+      {%
+      }
+
+\cproject
       {Jan 2019 - Feb 2019}
       {Policy in Action Fellow (Bangalore 2019)}
       {\textsc{Young Leaders for Active Citizenship}, YLAC}
@@ -189,7 +205,7 @@
       }
 
 \cproject
-      {Jan 2019 - Present}
+      {Jan 2019 - Jul 2019}
       {Associate, Systematic Market Making}
       {\textsc{Goldman Sachs}, Bangalore}
       {}
