feat: add details about allround

--- a/cv.tex
+++ b/cv.tex
@@ -211,6 +211,14 @@
       {\textsc{allround.club}, Bangalore}
       {}
       {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Raised \$2.5m in seed capital.
+            \item Scaled revenues to \$1m ARR, with more than 100\% growth in revenue, month on month from January '21
+                to July '21.
+            \item Expanded globally to USA, UK, UAE, Phillipines and Indonesia apart from the core market of India.
+            \item Built a Map based learning environment for kids to progress through levels and multiple asynchronous
+                games to grasp concepts like note recognition in music, ear training, pitch recognition.
+        \end{itemize}
       }
 
 \cproject
