feat: update fuze.finance

--- a/cv.tex
+++ b/cv.tex
@@ -161,10 +161,10 @@
     {%
         \itemlist {%
                 \textsc{\small Languages} %
-                & \textbf{JavaScript} (Expert), \textbf{Java} (Proficient), \textbf{Python} (Proficient),
+                & \textbf{JavaScript} (Expert), \textbf{Python} (Expert), \textbf{Java} (Proficient),
                   \textbf{C++} (Functional)\\
                 \textsc{\small Web Dev} %
-                & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{React}, \textbf{Nodejs}\\
+                & \textbf{HTML}, \textbf{CSS}, \textbf{React}, \textbf{Nodejs}\\
                 \textsc{\small Tools} %
                 & \textbf{Git} (Expert), \textbf{Shell} (Proficient), \textbf{Vim} (Expert)\\
             }
@@ -206,13 +206,25 @@
 \section{Work Experience}
 
 \cproject
-      {Jan 2020 - Present}
+      {Nov 2022 - Present}
+      {Co-founder \& CTO}
+      {\textsc{fuze.finance}, UAE}
+      {}
+      {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Raised seed capital from Further Ventures, backed by ADQ.
+            \item Building digital assets infrastructure for the Middle East.
+        \end{itemize}
+      }
+
+\cproject
+      {Jan 2020 - Mar 2022}
       {Co-founder \& CTO}
       {\textsc{allround.club}, Bangalore}
       {}
       {%
         \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Raised \$2.5m in seed capital.
+            \item Raised \$2.5m in seed capital from Stellaris Venture Partners and Athera Venture Partners.
             \item Scaled revenues to \$1m ARR, with more than 100\% growth in revenue, month on month from January '21
                 to July '21.
             \item Expanded globally to USA, UK, UAE, Phillipines and Indonesia apart from the core market of India.
